--- a/Draw/SettingWindow.xaml
+++ b/Draw/SettingWindow.xaml
@@ -5,25 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Drawing"
         mc:Ignorable="d"
-        Title="设置" Height="400" Width="580" ResizeMode="NoResize">
+        Title="设置" Height="400" Width="435.2" ResizeMode="NoResize">
     <Grid >
-        <GroupBox Header="当前抽签集" HorizontalAlignment="Left" Height="350" Margin="10,10,10,10" VerticalAlignment="Top" Width="274">
+        <GroupBox Header="当前抽签集" HorizontalAlignment="Left" Height="350" Margin="10,10,0,0" VerticalAlignment="Top" Width="208">
             <Grid >
-                <Label Content="输入：" Margin="10,10,0,0" Height="25" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                <TextBox x:Name="Tb_Names" HorizontalAlignment="Center" Margin="10,40,10.6,0" VerticalAlignment="Top" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible" Height="278" Width="241"/>
-                <TextBox x:Name="Tb_Name" HorizontalAlignment="Left" Margin="61,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="25"/>
-                <Button x:Name="Btn_Add" Content="添加" HorizontalAlignment="Left" Margin="186,10,0,0" VerticalAlignment="Top" Width="65" Height="25" Click="Btn_Add_Click"/>
+                <Label Content="输入：" Margin="0,10,0,0" Height="25" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <TextBox x:Name="Tb_Name" HorizontalAlignment="Left" Margin="46,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="100" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="25"/>
+                <Button x:Name="Btn_Add" Content="添加" HorizontalAlignment="Left" Margin="151,10,0,0" VerticalAlignment="Top" Width="41" Height="25" Click="Btn_Add_Click"/>
+                <ListBox x:Name="Lb_Names" HorizontalAlignment="Left" Height="288" Margin="0,40,0,0" VerticalAlignment="Top" Width="192"/>
             </Grid>
         </GroupBox>
-        <GroupBox Header="名单文件" HorizontalAlignment="Left" Height="194" Margin="289,10,0,0" VerticalAlignment="Top" Width="274">
+        <GroupBox Header="名单文件" HorizontalAlignment="Left" Height="194" Margin="223,10,0,0" VerticalAlignment="Top" Width="195">
             <Grid>
-                <Button x:Name="Btn_Import_File" Content="导入文件" HorizontalAlignment="Left" Margin="10,141,0,0" VerticalAlignment="Top" Width="65" Height="25" Click="Btn_Import_File_Click"/>
-                <ListBox x:Name="Lb_Items" HorizontalAlignment="Left" Height="96" Margin="10,40,0,0" VerticalAlignment="Top" Width="242" ScrollViewer.VerticalScrollBarVisibility="Visible" VerticalContentAlignment="Top"/>
-                <Button x:Name="Btn_Select_File" Content="选择名单" HorizontalAlignment="Left" Margin="187,141,0,0" VerticalAlignment="Top" Width="65" Height="25" Click="Btn_Select_File_Click"/>
-                <Label x:Name="Lb_CurrentFile" Content="当前名单：NULL" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="25" Width="171" VerticalContentAlignment="Center"/>
+                <Button x:Name="Btn_Import_File" Content="导入文件" HorizontalAlignment="Left" Margin="0,141,0,0" VerticalAlignment="Top" Width="65" Height="25" Click="Btn_Import_File_Click"/>
+                <ListBox x:Name="Lb_Items" HorizontalAlignment="Left" Height="96" Margin="0,40,0,0" VerticalAlignment="Top" Width="180" ScrollViewer.VerticalScrollBarVisibility="Auto" VerticalContentAlignment="Top"/>
+                <Button x:Name="Btn_Select_File" Content="选择名单" HorizontalAlignment="Left" Margin="115,141,0,0" VerticalAlignment="Top" Width="65" Height="25" Click="Btn_Select_File_Click"/>
+                <Label x:Name="Lb_CurrentFile" Content="当前名单：NULL" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Height="25" Width="180" VerticalContentAlignment="Center"/>
             </Grid>
         </GroupBox>
-        <GroupBox Header="杂项" HorizontalAlignment="Left" Height="151" Margin="289,209,0,0" VerticalAlignment="Top" Width="274">
+        <GroupBox Header="杂项" HorizontalAlignment="Left" Height="151" Margin="223,209,0,0" VerticalAlignment="Top" Width="195">
             <Grid>
                 <CheckBox x:Name="Cb_Speech" Content="语音朗读" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="25" IsChecked="True" Checked="Cb_Speech_Checked" Unchecked="Cb_Speech_Unchecked" Click="Cb_Speech_Click" IsEnabled="False"/>
 
